[package]
name = "bl602-template"
version = "0.0.1"
authors = ["WYVERN"]
edition = "2018"
readme = "README.md"
rust-version = "1.59"

[dependencies]
bl602-hal = { git = "https://github.com/sipeed/bl602-hal" }
embedded-hal = "=1.0.0-alpha.5"
panic-halt = "0.2.0"
riscv = "0.10.0"
riscv-rt = "0.11.0"

# Thanks to https://github.com/melastmohican/pinecone-blinky for the `cargo fix` fix and optimisations
[[bin]]
name = "bl602-template"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
